--- a/client-side/css/style.css
+++ b/client-side/css/style.css
@@ -1,11 +1,32 @@
 .object__container {
-    text-align: center;
-    background-color: cadetblue;
-    margin: 2rem;
+    margin: 2rem auto;
     padding: 2rem;
     border-radius: 50px;
+    max-width: 720px;
+    text-align: center;
+    letter-spacing: .015rem;
+    background-color: cadetblue;
 }
 
-.object__container img {
-    max-height: 400px;
+.object {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.object h1 {
+    font-size: 2.8rem;
+}
+
+.object h2 {
+    font-size: 2rem;
+}
+
+.object p {
+    font-size: 1.5rem;
+}
+
+.object img {
+    max-height: 100%;
+    max-width: 100%;
 }
