--- a/client-side/css/style.css
+++ b/client-side/css/style.css
@@ -26,7 +26,7 @@ body{
 .nav__list_home {
   background-color: red;
   border-radius: 6px;
-  color: lime;
+  color: white;
   cursor: pointer;
   padding: 8px;
   margin-left: 20px;
