add styling to history page

--- a/client-side/css/HomePage.css
+++ b/client-side/css/HomePage.css
@@ -1,5 +1,6 @@
 .homePage__container{
-  background-color: whitesmoke;
+  background-color: rgb(245, 204, 243);
+  border-radius: 50px;
 }
 
 .home__span{
