--- a/client-side/css/ArtStyle.css
+++ b/client-side/css/ArtStyle.css
@@ -4,10 +4,9 @@
     font-size: 1.5rem;
     letter-spacing: .15rem;
     margin: 0 auto;
-    /* max-width: 720px; */
-    /* padding: 1.2rem; */
+    max-width: 800px;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 .art__list li {
@@ -15,8 +14,13 @@
     border-radius: 50px;
     color: #fffffc;
     margin: 1.5rem auto;
-    padding: .5rem;
-    /* max-width: 500px; */
+    padding: .7rem;
+}
+
+.art__list li:hover {
+    background-color: black;
+    color: #fdffb6;
+    cursor: pointer;
 }
 
 .art__list_asianArtsList {
@@ -31,88 +35,6 @@
     background-color: blue;
 }
 
-.art__list li:hover {
-    background-color: black;
-    color: #fdffb6;
-    cursor: pointer;
-}
-
-.artObject__container {
-    display: flex;
-    justify-content: center;
-    /* flex-direction: row; */
-	margin: 2rem auto;
-	padding: 2rem;
-	border-radius: 50px;
-	/* max-width: 600px; */
-    max-height:min-content;
-	text-align: center;
-	letter-spacing: 0.015rem;
-	background-color: cadetblue;
-}
-
-.artObject {
-    text-align: left;
-    letter-spacing: .03rem;
-    line-height: 1.9rem;
-    /* justify-content: center; */
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: space-evenly ;
-    /* margin-top: 2rem; */
-    /* font-family: 'Architects Daughter', cursive; */
-}
-
-.artObject h1 {
-	font-size: 2.8rem;
-}
-
-.artObject h2 {
-    /* max-width: 200px; */
-	font-size: 2rem;
-}
-
-.artObjectInfo {
-    border: 1px solid blue;
-    z-index: 1;
-    position: absolute;
-    left: 35%;
-    /* margin-top: 100px; */
-    max-width: 350px;
-    overflow: auto;
-    /* top: 25%; */
-    /* color: cadetblue; */
-	font-size: 1.2rem;
-    background-color: white;
-}
-
-.artObjectInfo p {
-
-}
-
-/* .artObject p:hover {
-    color: black;
-} */
-
-.artObjectList {
-    flex:2;
-}
-.artImage {
-    flex:3;
-    display: flex;
-    max-height: 800px;
-    /* max-width: 100%; */
-}
-
-.artObject img {
-    border-radius: 10px;
-    z-index: 2;
-    position: relative;
-	/* max-height: 100%; */
-	max-width: 100%;
-}
-
-
 #selectedDepartment {
     text-transform: uppercase;
     border: 5px solid yellow;
@@ -120,7 +42,78 @@
     margin: 0 auto;
 }
 
-@media screen and (max-width: 720px) {
+.artPage {
+    font-size: large;
+    letter-spacing: .03rem;
+    line-height: 1.5;
+    margin-bottom: 2.2rem;
+}
+
+.artPage h2, p {
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+.artObject__container {
+    display: flex;
+    justify-content: space-around;
+	margin: 2.2rem auto;
+	padding: 2rem;
+	border-radius: 50px;
+    background-color: rgb(232, 232, 232);
+}
+
+#asianArtsPage {
+    border: 4px solid red;
+}
+
+#paintingsPage {
+    border: 4px solid green;
+}
+
+#printsPage {
+    border: 4px solid blue;
+}
+
+.artObject {
+    text-align: left;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.artObjectList {
+    flex:1;
+    margin: 30px 30px;
+    line-height: 2;
+    font-size: 1.2rem;
+    letter-spacing: .03rem;
+}
+
+.artImage {
+    flex:3;
+    display: flex;
+    max-height: 800px;
+}
+
+.artObject img {
+    border-radius: 10px;
+    margin: 0 auto;
+	max-width: 100%;
+}
+
+.artObjectList h2 {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 2rem;
+    line-height: 1.2;
+    padding: 0;
+    margin: 1rem 0;
+}
+
+.artYear {
+    font-size: 1.6rem;
+}
+
+@media screen and (max-width: 890px) {
     .art__list {
         flex-direction: column;
         margin: 0 auto;
@@ -135,9 +128,5 @@
         text-align: center;
         display: inline;
         max-height: 100%;
-    }
-
-    .artImage {
-        /* max-height: 325px; */
     }
 }
