Quiz works need to work on styling

--- a/client-side/css/style.css
+++ b/client-side/css/style.css
@@ -62,7 +62,7 @@ body {
 	list-style-type: none;
 }
 
-.nav__list_games {
+.nav__list_quiz {
 	background-color: blue;
 	border-radius: 6px;
 	color: violet;
