--- a/client-side/css/ScienceStyle.css
+++ b/client-side/css/ScienceStyle.css
@@ -1,3 +1,18 @@
-*{
-    margin: 0;
+img {
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    margin-bottom: 3rem;
+    max-width: 90%;
+    transition: box-shadow 0.3s ease-in;
+}
+
+img:hover {
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
+
+@media only screen and (max-width: 767px){
+    .Science__container{
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
 }
