--- a/client-side/css/QuizPage.css
+++ b/client-side/css/QuizPage.css
@@ -3,8 +3,8 @@
 }
 
 .quiz_container {
-  width: 600px;
-  max-width: 70%;
+  width: 2400px;
+  max-width: 95%;
   background-color: whitesmoke;
   border-radius: 5px;
   padding: 30px;
@@ -18,41 +18,59 @@
   padding: 5px;
   margin-top: 20px;
 }
-
-.education__modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
+.q1{
+  background-color: chartreuse;
+  padding: 5px;
+  margin: 5px;
 }
 
-.modal-content {
-  background-color: palegreen;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 40%;
+.q2{
+  background-color: lightblue;
+  padding: 5px;
+  margin: 5px;
 }
 
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+.q3{
+  background-color: red;
+  padding: 5px;
+  margin: 5px;
+}
+.q4{
+  background-color: yellow;
+  padding: 5px;
+  margin: 5px;
+}
+.q5{
+  background-color: violet;
+  padding: 5px;
+  margin: 5px;
 }
 
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
+.q6{
+  background-color: orange;
+  padding: 5px;
+  margin: 5px;
+}
+.Q_1_2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  grid-column-gap: 1em;
+  padding: 1em 1em 1em;
 }
 
+.Q_3_4 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  grid-column-gap: 1em;
+  padding: 1em 1em 1em;
+}
 
+.Q_5_6 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  grid-column-gap: 1em;
+  padding: 1em 1em 1em;
+}
