Made a few more eidts for html and css

--- a/client-side/css/QuizPage.css
+++ b/client-side/css/QuizPage.css
@@ -13,7 +13,8 @@
 }
 
 .submit_Btn{
-  background-color: lightgreen;
+  background-color: indigo;
+  color: white;
   text-align: center;
   padding: 5px;
   margin-top: 20px;
