--- a/client-side/css/ScienceStyle.css
+++ b/client-side/css/ScienceStyle.css
@@ -1,3 +1,5 @@
+
+
 img {
     box-shadow: 0 1px 2px rgba(0,0,0,0.15);
     margin-bottom: 3rem;
@@ -7,6 +9,20 @@ img {
 
 img:hover {
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
+
+.Science__title {
+  font-family: Orbitron, sans-serif;
+  font-size: 3.236rem;
+  font-weight: bold;
+}
+
+.potd__container_explianation {
+  font-family: Orbitron, sans-serif;
+  font-size: 1.618rem;
+  line-height: 2.5rem;
+  margin: 2rem;
+  padding: 2rem;
 }
 
 @media only screen and (max-width: 767px){
